--- a/agent/package.json
+++ b/agent/package.json
@@ -9,5 +9,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs"
+  "type": "commonjs",
+  "dependencies": {
+    "child_process": "^1.0.2",
+    "zod": "^4.1.12"
+  }
 }
