--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "next-bedrock-agent",
+  "name": "bedrock-ai-agent-monorepo",
   "private": true,
+  "type": "module",
   "scripts": {
-    "agent": "node agent/cli.mjs",
     "dev": "npm --prefix web run dev",
     "build": "npm --prefix web run build",
-    "planner": "uvicorn planner.app:app --host 0.0.0.0 --port 8080 --reload"
+    "start": "npm --prefix web run start",
+    "planner": "python -m uvicorn planner.app:app --host 0.0.0.0 --port 8080 --reload",
+    "agent": "node agent/cli.mjs"
   },
   "dependencies": {
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.13"
+    "tailwindcss": "^4.1.13",
+    "node-fetch": "^3.3.2"
   }
 }
