--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "agent": "node agent/cli.mjs"
   },
   "dependencies": {
+    "node-fetch": "^3.3.2",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.13",
-    "node-fetch": "^3.3.2"
+    "tailwindcss": "^4.1.13"
   }
 }
